traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:40: error: Missing closing brace `}' assumed here
	override def forward(i:Int)  { 
        ^TraversalByColumn:40: error: Missing closing brace `}' assumed here
	override def forward(i:Int)  { 
        ^